; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_cpu_quiesce.c_cpu_quiescent_counter_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_cpu_quiesce.c_cpu_quiescent_counter_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPU_CHECKIN_MASK = common dso_local global i32 0, align 4
@MAX_CPUS = common dso_local global i32 0, align 4
@CPU_EXPECTED_MASK = common dso_local global i32 0, align 4
@CPU_CHECKIN_MIN_INTERVAL_US = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cpu_quiescent_counter_init() #0 {
  %1 = load i32, i32* @CPU_CHECKIN_MASK, align 4
  %2 = load i32, i32* @MAX_CPUS, align 4
  %3 = call i32 @cpu_checked_in_bit(i32 %2)
  %4 = and i32 %1, %3
  %5 = call i32 @assert(i32 %4)
  %6 = load i32, i32* @CPU_EXPECTED_MASK, align 4
  %7 = load i32, i32* @MAX_CPUS, align 4
  %8 = call i32 @cpu_expected_bit(i32 %7)
  %9 = and i32 %6, %8
  %10 = call i32 @assert(i32 %9)
  %11 = load i32, i32* @CPU_CHECKIN_MASK, align 4
  %12 = load i32, i32* @MAX_CPUS, align 4
  %13 = call i32 @cpu_expected_bit(i32 %12)
  %14 = and i32 %11, %13
  %15 = icmp eq i32 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32, i32* @CPU_EXPECTED_MASK, align 4
  %19 = load i32, i32* @MAX_CPUS, align 4
  %20 = call i32 @cpu_checked_in_bit(i32 %19)
  %21 = and i32 %18, %20
  %22 = icmp eq i32 %21, 0
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load i32, i32* @CPU_CHECKIN_MIN_INTERVAL_US, align 4
  %26 = call i32 @cpu_quiescent_counter_set_min_interval_us(i32 %25)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @cpu_checked_in_bit(i32) #1

declare dso_local i32 @cpu_expected_bit(i32) #1

declare dso_local i32 @cpu_quiescent_counter_set_min_interval_us(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
